--- a/contact.html
+++ b/contact.html
@@ -26,8 +26,7 @@
       <p style="font-size: 1.1rem;">Phone: 07700 123456</p>
       <p style="font-size: 1.1rem;">Instagram/Facebook: @spectacularcleaningservices</p>
       <p style="font-size: 1.1rem;">Website: <a href="https://www.spectacularcleaning.co.uk" target="_blank">www.spectacularcleaning.co.uk</a></p>
-<form action="https://formsubmit.co/ukscservices@gmail.com" method="POST" style="margin-top: 2rem; max-width: 500px; margin-left: auto; margin-right: auto; text-align: left;">
-      <form style="margin-top: 2rem; max-width: 500px; margin-left: auto; margin-right: auto; text-align: left;">
+      <form action="https://formsubmit.co/ukscservices@gmail.com" method="POST" style="margin-top: 2rem; max-width: 500px; margin-left: auto; margin-right: auto; text-align: left;">
         <label for="name">Name:</label><br>
         <input type="text" id="name" name="name" style="width: 100%; padding: 0.5rem; margin-bottom: 1rem;"><br>
 
@@ -38,11 +37,17 @@
         <textarea id="message" name="message" rows="5" style="width: 100%; padding: 0.5rem; margin-bottom: 1rem;"></textarea><br>
 
         <button type="submit" class="btn">Send Message</button>
+      <input type="hidden" name="_captcha" value="false">
+        <input type="hidden" name="_next" value="https://spectacularcleaning.co.uk/thank-you.html">
       </form>
     </section>
   </main>
   <footer>
     <p>&copy; 2025 SPECTACULAR CLEANING SERVICES - All rights reserved.</p>
+  </footer>
+</body>
+</html>
+
   </footer>
 </body>
 </html>
